src/components/inputs/Text.scss
@import "~@nti/style-common";

.nti-text-input {
	border-radius: 2px;
	background-color: $panel-background;
	border: solid 1px $border-grey-light;
	color: $secondary-grey;
	font: normal 400 0.875rem/2rem $body-font-family;
	//since these are box-sizing: border-box the borders are eating into the
	//height. We want the input themselves to be 32px tall. So we need to add
	//2px to account for the borders
	height: rem-calc(34px);
	padding: rem-calc(0 10px);

	.nti-clearable-input & {
		padding: rem-calc(0 30px 0 10px);
	}

	&::placeholder {
		font-style: italic;
		color: $tertiary-grey;
	}
}

